added header and footer and some styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/Styles/reset.css" />
+    <link rel="stylesheet" href="/Styles/style.css" />
     <title>Genesis</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Genesis</h1>
+      <nav class="navlist">
+        <ul>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h3>Shooting Stars</h3>
+      <p>Hello, I’m Bakhtiyar Sattarov,
+product designer with experience
+in studios and startups</p>
+<section>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+  <div><img src="" alt=""></div>
+</section>
+    </main>
+    <footer> <h1>Genesis</h1>
+    <nav class="navlist">
+        <ul>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </footer>
+  </body>
 </html>
