added grid rows and colums

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
       <p>Hello, I’m Bakhtiyar Sattarov,
 product designer with experience
 in studios and startups</p>
-<section>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
-  <div><img src="" alt=""></div>
+<section class="grid-container">
+  <div class="grid-item grid-item-1"><img src="/Images/sculptur.png" alt=""></div>
+  <div class="grid-item grid-item-2"><img src="/Images/cactus.png" alt=""></div>
+  <div class="grid-item grid-item-3"><img src="/Images/halo.png" alt=""></div>
+  <div class="grid-item grid-item-4"><img src="/Images/sunset.png" alt=""></div>
+  <div class="grid-item grid-item-5"><img src="/Images/checked-shirt.png" alt=""></div>
+  <div class="grid-item grid-item-6"><img src="/Images/liberty.png" alt=""></div>
+  <div class="grid-item grid-item-7"><img src="/Images/walking.png" alt=""></div>
+  <div class="grid-item grid-item-8"><img src="/Images/desert.png" alt=""></div>
+  <div class="grid-item grid-item-9"><img src="/Images/flowers.png" alt=""></div>
+  <div class="grid-item grid-item-10"><img src="/Images/grey-paint.png" alt=""></div>
+  <div class="grid-item grid-item-11"><img src="/Images/keyboard.png" alt=""></div>
+  <div class="grid-item grid-item-12"><img src="/Images/woods.png" alt=""></div>
 </section>
     </main>
     <footer> <h1>Genesis</h1>
