--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <main>
       <h3>Shooting Stars</h3>
       <p>Hello, I’m Bakhtiyar Sattarov,
-product designer with experience
-in studios and startups</p>
+            <span>product designer</span> with experience
+             in studios and startups</p>
 <section class="grid-container">
   <div class="grid-item grid-item-1"><img src="/Images/sculptur.png" alt=""></div>
   <div class="grid-item grid-item-2"><img src="/Images/cactus.png" alt=""></div>
@@ -34,7 +34,7 @@ in studios and startups</p>
   <div class="grid-item grid-item-9"><img src="/Images/flowers.png" alt=""></div>
   <div class="grid-item grid-item-10"><img src="/Images/grey-paint.png" alt=""></div>
   <div class="grid-item grid-item-11"><img src="/Images/keyboard.png" alt=""></div>
-  <div class="grid-item grid-item-12"><img src="/Images/woods.png" alt=""></div>-->
+  <div class="grid-item grid-item-12"><img src="/Images/woods.png" alt=""></div>
 </section>
     </main>
     <footer> <h1>Genesis</h1>
