added icons and font family

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Styles/reset.css" />
     <link rel="stylesheet" href="/Styles/style.css" />
+    <script src="https://kit.fontawesome.com/4d3f468746.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <title>Genesis</title>
   </head>
   <body>
@@ -36,6 +40,13 @@
   <div class="grid-item grid-item-11"><img src="/Images/keyboard.png" alt=""></div>
   <div class="grid-item grid-item-12"><img src="/Images/woods.png" alt=""></div>
 </section>
+<section>
+  <p>We love work hard and explore new things that’s why we cover lot of things. Check our service list and view details</p>
+  <!--<ul>
+    <li>Multimedia</li>
+    <li>Interactive Design</li>
+  </ul>-->
+</section>
     </main>
     <footer> <h1>Genesis</h1>
     <nav class="navlist">
@@ -43,6 +54,10 @@
           <li><a href="">Projects</a></li>
           <li><a href="">Contact</a></li>
         </ul>
+        <i class="fa-solid fa-basketball icon"></i>
+        <i class="fa-brands fa-instagram icon"></i>
+        <i class="fa-brands fa-twitter icon"></i>
       </footer>
+    
   </body>
 </html>
