--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>Genesis</h1>
+      <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
       <nav class="navlist">
         <ul>
           <li><a href="">Projects</a></li>
@@ -48,7 +48,7 @@
   </ul>-->
 </section>
     </main>
-    <footer> <h1>Genesis</h1>
+    <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
           <li><a href="">Projects</a></li>
