added hover on links & footer & header to projects

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -15,8 +15,28 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
-
     <title>Projects</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1>
+      <nav class="navlist">
+        <ul>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
+    <nav class="navlist">
+        <ul>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+        <i class="fa-solid fa-basketball icon"></i>
+        <i class="fa-brands fa-instagram icon"></i>
+        <i class="fa-brands fa-twitter icon"></i>
+      </footer>
+  </body>
 </html>
