--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
       <nav class="navlist">
         <ul>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/Pages/projects.html">Projects</a></li>
+          <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
