Added text after images and a horizontal divider

--- a/index.html
+++ b/index.html
@@ -40,12 +40,26 @@
   <div class="grid-item grid-item-11"><img src="/Images/keyboard.png" alt=""></div>
   <div class="grid-item grid-item-12"><img src="/Images/woods.png" alt=""></div>
 </section>
-<section>
+<section class="after-images">
   <p>We love work hard and explore new things that’s why we cover lot of things. Check our service list and view details</p>
-  <!--<ul>
+  <ul>
     <li>Multimedia</li>
     <li>Interactive Design</li>
-  </ul>-->
+    <li>Branding</li>
+  </ul>
+  <ul>
+    <li>Creative Design</li>
+    <li>Packaging</li>
+    <li>Coding</li>
+  </ul>
+</section>
+<div class="horizontal-line"></div>
+<section class="awards">
+  <ul class="awards"><li>Awwwards</li>
+    <li>Site of the day</li>
+    <li>Genesis Ui Kit</li>
+  </ul>
+    
 </section>
     </main>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
