--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Styles/reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../Styles/style.css" />
     <script
       src="https://kit.fontawesome.com/4d3f468746.js"
       crossorigin="anonymous"
@@ -19,15 +19,19 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1>
+      <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1
       <nav class="navlist">
         <ul>
           <li><a href="">Projects</a></li>
           <li><a href="">Contact</a></li>
         </ul>
-      </nav>
+    </nav>
     </header>
-    <main></main>
+    <main><div>
+        <h2>A fresh new title can make all the difference! </h2>
+        <p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.</p></div>
+    </main>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
