added awards content

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <p>Hello, I’m Bakhtiyar Sattarov,
             <span>product designer</span> with experience
              in studios and startups</p>
+             <div class="quote">
+             <p class="project-text">Design is about progress </p></div>
 <section class="grid-container">
   <div class="grid-item grid-item-1"><img src="/Images/sculptur.png" alt=""></div>
   <div class="grid-item grid-item-2"><img src="/Images/cactus.png" alt=""></div>
@@ -54,13 +56,48 @@
   </ul>
 </section>
 <div class="horizontal-line"></div>
-<section class="awards">
-  <ul class="awards"><li>Awwwards</li>
-    <li>Site of the day</li>
-    <li>Genesis Ui Kit</li>
+<section>
+  <div>
+    <ul class="awards">
+       <li>Awwwards</li>
+       <li>Site of the day</li>
+       <li>Genesis Ui Kit <p class="project-text ui-kit">Application that helps to find nearest sport centres
+in your area</p></li>
+       <li>2018</li>
+    </ul>
+  </div>
+<div>
+  <ul class="awards-2">
+      <li>Best navigation</li>
+      <li>Genesis Template <p class="project-text ui-kit">Application that helps to find nearest sport centres
+in your area</p></li>
+      <li>2018</li>
   </ul>
+</div>
     
 </section>
+<div class="horizontal-line"></div>
+<section>
+<div>
+     <ul class="awards">
+        <li>CSSDesignAwards</li>
+        <li>Site of the day</li>
+        <li>Genesis Ui Kit<p class="project-text ui-kit">Application that helps to find nearest sport centres
+    in your area</p> </li>
+    
+        <li>2017</li>
+     </ul>
+</div>
+<div >
+    <ul class="awards-2">
+       <li>Best navigation</li>
+       <li>Genesis Template <p class="project-text ui-kit">Application that helps to find nearest sport centres
+in your area</p></li>
+       <li>2016</li>
+    </ul>
+</div>
+</section>
+<div class="horizontal-line"></div>
     </main>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
