added paragraphs and images to projects.html

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1
+      <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1>
       <nav class="navlist">
         <ul>
           <li><a href="">Projects</a></li>
@@ -27,11 +27,38 @@
         </ul>
     </nav>
     </header>
-    <main><div>
+    <main>
+      <section class="pro">
+        <div>
         <h2>A fresh new title can make all the difference! </h2>
         <p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
-You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.</p></div>
-    </main>
+You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.</p></div></section>
+<section class="pro"><div class="project-list">
+  <ul>
+      <li>Project</li>
+      <li>Design</li>
+      <li>Client</li>
+      <li>Deliverable</li>
+      <li>Year</li>
+      <li>Field</li>
+</ul>
+</div>
+<div class="project-list">
+<ul>
+  <li>Design Portfolio</li>
+  <li>Bakhtiyar Sattarov</li>
+  <li>Craftwork</li>
+  <li>Website Design</li>
+  <li>2018</li>
+  <li>Branding, Personal</li>
+</ul>
+</div></section>
+<section><img class="walking-img" src="/Images/walking-2.png" alt="girl walking"></section>
+<p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing hidden in the middle of text. You need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
+    <section class="bottom-images"><img src="/Images/woods-2.png" alt="a forest">
+    <img src="/Images/flowers-table.png" alt="flowers on a table">
+  <img src="/Images/building.png" alt="a blue building"></section>
+</main>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
