--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Styles/reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../Styles/style.css" />
     <script
       src="https://kit.fontawesome.com/4d3f468746.js"
       crossorigin="anonymous"
@@ -17,5 +17,26 @@
     />
     <title>Contact</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1>
+      <nav class="navlist">
+        <ul>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+    </header>
+    <main></main>
+    <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
+    <nav class="navlist">
+        <ul>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+        <i class="fa-solid fa-basketball icon"></i>
+        <i class="fa-brands fa-instagram icon"></i>
+        <i class="fa-brands fa-twitter icon"></i>
+      </footer>
+  </body>
 </html>
