--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -27,7 +27,48 @@
         </ul>
     </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="pro">
+          <p>Full set of great
+features to make your
+product fresh</p>
+<p class="project-text">Our favorite brands are our friends! We help them to achieve their goals, they help us to stay sharp.</p>
+</section>
+    <section class="pro">
+            <form action="action_page.php" method="POST">
+              <div>
+                <label for="fullname">Name</label>
+                <input
+                  type="text"
+                  id="fullname"
+                  required
+                />
+              </div>
+
+              <div>
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  required
+                />
+              </div>
+
+              <div>
+                <label for="message">Message:</label>
+               <textarea name="message"
+                  class="message-area"
+                  cols="20"
+                  rows="1"
+                 ></textarea>  
+              </div>
+
+              <div>
+                <button type="submit">Submit</button>
+              </div>
+            </form></section>
+            <section><img src="/Images/Map.png" alt=""></section>
+</main>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
