corrected positions of content in contact & projec

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -28,13 +28,13 @@
     </nav>
     </header>
     <main>
-      <section class="pro">
+      <section class="pro-1">
           <p>Full set of great
 features to make your
 product fresh</p>
 <p class="project-text">Our favorite brands are our friends! We help them to achieve their goals, they help us to stay sharp.</p>
 </section>
-    <section class="pro">
+    <section class="pro form">
             <form action="action_page.php" method="POST">
               <div>
                 <label for="fullname">Name</label>
@@ -67,7 +67,7 @@ product fresh</p>
                 <button type="submit">Submit</button>
               </div>
             </form></section>
-            <section><img src="/Images/Map.png" alt=""></section>
+            <section><div class="img-centre"><img class="map" src="/Images/Map.png" alt=""></div></section>
 </main>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
