--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -28,12 +28,13 @@
     </nav>
     </header>
     <main>
-      <section class="pro">
+      <section class="pro-1">
         <div>
         <h2>A fresh new title can make all the difference! </h2>
         <p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
 You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.</p></div></section>
-<section class="pro"><div class="project-list">
+<section class="pro">
+  <div class="project-list">
   <ul>
       <li>Project</li>
       <li>Design</li>
@@ -42,8 +43,6 @@ You need to be sure there isn't anything embarrassing hidden in the middle of te
       <li>Year</li>
       <li>Field</li>
 </ul>
-</div>
-<div class="project-list">
 <ul>
   <li>Design Portfolio</li>
   <li>Bakhtiyar Sattarov</li>
@@ -53,7 +52,7 @@ You need to be sure there isn't anything embarrassing hidden in the middle of te
   <li>Branding, Personal</li>
 </ul>
 </div></section>
-<section><img class="walking-img" src="/Images/walking-2.png" alt="girl walking"></section>
+<section><div class="img-centre"><img class="walking-img" src="/Images/walking-2.png" alt="girl walking"></div></section>
 <p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing hidden in the middle of text. You need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
     <section class="bottom-images"><img src="/Images/woods-2.png" alt="a forest">
     <img src="/Images/flowers-table.png" alt="flowers on a table">
