--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -22,8 +22,8 @@
       <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1>
       <nav class="navlist">
         <ul>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/Pages/projects.html">Projects</a></li>
+          <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -67,17 +67,17 @@ product fresh</p>
                 <button type="submit">Submit</button>
               </div>
             </form></section>
-            <section><div class="img-centre"><img class="map" src="/Images/Map.png" alt=""></div></section>
+            <section><div class="img-centre"><img class="map" src="/Images/Map.png" alt="Image of google maps"></div></section>
 </main>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/Pages/projects.html">Projects</a></li>
+          <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
-        <i class="fa-solid fa-basketball icon"></i>
-        <i class="fa-brands fa-instagram icon"></i>
-        <i class="fa-brands fa-twitter icon"></i>
+        <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter icon"></i></a>
       </footer>
   </body>
 </html>
