--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -22,8 +22,8 @@
       <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1>
       <nav class="navlist">
         <ul>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/Pages/projects.html">Projects</a></li>
+          <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -61,12 +61,12 @@ You need to be sure there isn't anything embarrassing hidden in the middle of te
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/Pages/projects.html">Projects</a></li>
+          <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
-        <i class="fa-solid fa-basketball icon"></i>
-        <i class="fa-brands fa-instagram icon"></i>
-        <i class="fa-brands fa-twitter icon"></i>
+       <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter icon"></i></a>
       </footer>
   </body>
 </html>
