--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
              <div class="quote">
              <p class="project-text">Design is about progress </p></div>
 <section class="grid-container">
-  <div class="grid-item grid-item-1"><img src="/Images/sculptur.png" alt=""></div>
-  <div class="grid-item grid-item-2"><img src="/Images/cactus.png" alt=""></div>
- <div class="grid-item grid-item-3"><img src="/Images/halo.png" alt=""></div>
-  <div class="grid-item grid-item-4"><img src="/Images/sunset.png" alt=""></div>
-  <div class="grid-item grid-item-5"><img src="/Images/checked-shirt.png" alt=""></div>
- <div class="grid-item grid-item-6"><img src="/Images/liberty.png" alt=""></div>
-  <div class="grid-item grid-item-7"><img src="/Images/walking.png" alt=""></div>
-  <div class="grid-item grid-item-8"><img src="/Images/desert.png" alt=""></div>
-  <div class="grid-item grid-item-9"><img src="/Images/flowers.png" alt=""></div>
-  <div class="grid-item grid-item-10"><img src="/Images/grey-paint.png" alt=""></div>
-  <div class="grid-item grid-item-11"><img src="/Images/keyboard.png" alt=""></div>
-  <div class="grid-item grid-item-12"><img src="/Images/woods.png" alt=""></div>
+  <div class="grid-item grid-item-1"><img src="/Images/sculptur.png" alt="impage of a sculpture"></div>
+  <div class="grid-item grid-item-2"><img src="/Images/cactus.png" alt="cacti plants and a man with a blue baloon covering his face"></div>
+ <div class="grid-item grid-item-3"><img src="/Images/halo.png" alt="a person with a halo"></div>
+  <div class="grid-item grid-item-4"><img src="/Images/sunset.png" alt="a man watching the sun set"></div>
+  <div class="grid-item grid-item-5"><img src="/Images/checked-shirt.png" alt="a man in a checked shirt"></div>
+ <div class="grid-item grid-item-6"><img src="/Images/liberty.png" alt="the statue of liberty"></div>
+  <div class="grid-item grid-item-7"><img src="/Images/walking.png" alt="a woman walking"></div>
+  <div class="grid-item grid-item-8"><img src="/Images/desert.png" alt="a woamn standing on a hill in the desert"></div>
+  <div class="grid-item grid-item-9"><img src="/Images/flowers.png" alt="a man with flowers on his face"></div>
+  <div class="grid-item grid-item-10"><img src="/Images/grey-paint.png" alt="a man with grey paint on his face"></div>
+  <div class="grid-item grid-item-11"><img src="/Images/keyboard.png" alt="a person on a keyboard swing"></div>
+  <div class="grid-item grid-item-12"><img src="/Images/woods.png" alt="a forest"></div>
 </section>
 <section class="after-images">
   <p>We love work hard and explore new things that’s why we cover lot of things. Check our service list and view details</p>
@@ -102,12 +102,12 @@ in your area</p></li>
     <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/Pages/projects.html">Projects</a></li>
+          <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
-        <i class="fa-solid fa-basketball icon"></i>
-        <i class="fa-brands fa-instagram icon"></i>
-        <i class="fa-brands fa-twitter icon"></i>
+        <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter icon"></i></a>
       </footer>
     
   </body>
