--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -19,11 +19,11 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><img src="/Images/Logo.png" alt="" /></h1>
+      <h1 class="logo"><img src="./Images/Logo.png" alt="" /></h1>
       <nav class="navlist">
         <ul>
-          <li><a href="/Pages/projects.html">Projects</a></li>
-          <li><a href="/Pages/contact.html">Contact</a></li>
+          <li><a href="./Pages/projects.html">Projects</a></li>
+          <li><a href="./Pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -69,11 +69,11 @@ product fresh</p>
             </form></section>
             <section><div class="img-centre"><img class="map" src="/Images/Map.png" alt="Image of google maps"></div></section>
 </main>
-    <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
+    <footer> <h1 class="logo"><img src="./Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
-          <li><a href="/Pages/projects.html">Projects</a></li>
-          <li><a href="/Pages/contact.html">Contact</a></li>
+          <li><a href="./Pages/projects.html">Projects</a></li>
+          <li><a href="./Pages/contact.html">Contact</a></li>
         </ul>
         <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
         <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
