--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@ in your area</p></li>
 </section>
 <div class="horizontal-line"></div>
     </main>
-    <footer> <h1 class="logo"><img src="/Images/Logo.png" alt=""></h1>
+    <footer> <h1 class="logo"><img src="./Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
-          <li><a href="/Pages/projects.html">Projects</a></li>
-          <li><a href="/Pages/contact.html">Contact</a></li>
+          <li><a href="./Pages/projects.html">Projects</a></li>
+          <li><a href="./Pages/contact.html">Contact</a></li>
         </ul>
         <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
         <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
