fixed navigation links

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -19,11 +19,11 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><img src="./Images/Logo.png" alt="" /></h1>
+      <h1 class="logo"><img src="../Images/Logo.png" alt="" /></h1>
       <nav class="navlist">
         <ul>
-          <li><a href="./Pages/projects.html">Projects</a></li>
-          <li><a href="./Pages/contact.html">Contact</a></li>
+          <li><a href="/Pages/projects.html">Projects</a></li>
+          <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     </header>
@@ -52,13 +52,13 @@ You need to be sure there isn't anything embarrassing hidden in the middle of te
   <li>Branding, Personal</li>
 </ul>
 </div></section>
-<section><div class="img-centre"><img class="walking-img" src="./Images/walking-2.png" alt="girl walking"></div></section>
+<section><div class="img-centre"><img class="walking-img" src="../Images/walking-2.png" alt="girl walking"></div></section>
 <p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing hidden in the middle of text. You need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-    <section class="bottom-images"><img src="./Images/woods-2.png" alt="a forest">
-    <img src="./Images/flowers-table.png" alt="flowers on a table">
-  <img src="./Images/building.png" alt="a blue building"></section>
+    <section class="bottom-images"><img src="../Images/woods-2.png" alt="a forest">
+    <img src="../Images/flowers-table.png" alt="flowers on a table">
+  <img src="../Images/building.png" alt="a blue building"></section>
 </main>
-    <footer> <h1 class="logo"><img src="./Images/Logo.png" alt=""></h1>
+    <footer> <h1 class="logo"><img src="../Images/Logo.png" alt=""></h1>
     <nav class="navlist">
         <ul>
           <li><a href="./Pages/projects.html">Projects</a></li>
