changed logo img from h1 to an a tag

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><img src="./Images/Logo.png" alt="" /></h1>
+    <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
       <nav class="navlist">
         <ul>
           <li><a href="/Pages/projects.html">Projects</a></li>
@@ -69,7 +69,7 @@ product fresh</p>
             </form></section>
             <section><div class="img-centre"><img class="map" src="../Images/Map.png" alt="Image of google maps"></div></section>
 </main>
-    <footer> <h1 class="logo"><img src="./Images/Logo.png" alt=""></h1>
+    <footer> <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
     <nav class="navlist">
         <ul>
           <li><a href="./Pages/projects.html">Projects</a></li>
