--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Styles/reset.css" />
-    <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="stylesheet" href="../Styles/reset.css" />
+    <link rel="stylesheet" href="../Styles/style.css">
     <script
       src="https://kit.fontawesome.com/4d3f468746.js"
       crossorigin="anonymous"
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><img src="../Images/Logo.png" alt="" /></h1>
+    <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
       <nav class="navlist">
         <ul>
           <li><a href="/Pages/projects.html">Projects</a></li>
@@ -58,7 +58,8 @@ You need to be sure there isn't anything embarrassing hidden in the middle of te
     <img src="../Images/flowers-table.png" alt="flowers on a table">
   <img src="../Images/building.png" alt="a blue building"></section>
 </main>
-    <footer> <h1 class="logo"><img src="../Images/Logo.png" alt=""></h1>
+    <footer>  
+     <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
     <nav class="navlist">
         <ul>
           <li><a href="./Pages/projects.html">Projects</a></li>
