--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <h1 class="logo"><img src="./Images/Logo.png" alt=""></h1>
+      <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
       <nav class="navlist">
         <ul>
           <li><a href="./Pages/projects.html">Projects</a></li>
@@ -100,7 +100,7 @@ in your area</p></li>
 </section>
 <div class="horizontal-line"></div>
     </main>
-    <footer> <h1 class="logo"><img src="./Images/Logo.png" alt=""></h1>
+    <footer> <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
     <nav class="navlist">
         <ul>
           <li><a href="./Pages/projects.html">Projects</a></li>
