--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Styles/reset.css" />
+    <link rel="stylesheet" href="../Styles/reset.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <script
       src="https://kit.fontawesome.com/4d3f468746.js"
@@ -19,58 +19,58 @@
   </head>
   <body>
     <header>
-    <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
+      <a href="/index.html"><img src="../Images/Logo.png" alt="Logo" /></a>
       <nav class="navlist">
         <ul>
           <li><a href="/Pages/projects.html">Projects</a></li>
           <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
-    </nav>
+      </nav>
     </header>
     <main>
       <section class="pro-1">
-          <p>Full set of great
-features to make your
-product fresh</p>
-<p class="project-text">Our favorite brands are our friends! We help them to achieve their goals, they help us to stay sharp.</p>
-</section>
-    <section class="pro form">
-            <form action="action_page.php" method="POST">
-              <div>
-                <label for="fullname">Name</label>
-                <input
-                  type="text"
-                  id="fullname"
-                  required
-                />
-              </div>
+        <p>Full set of great features to make your product fresh</p>
+        <p class="project-text">
+          Our favorite brands are our friends! We help them to achieve their
+          goals, they help us to stay sharp.
+        </p>
+      </section>
+      <section class="pro form">
+        <form action="action_page.php" method="POST">
+          <div>
+            <label for="fullname">Name</label>
+            <input type="text" id="fullname" required />
+          </div>
 
-              <div>
-                <label for="email">Email</label>
-                <input
-                  type="email"
-                  id="email"
-                  required
-                />
-              </div>
+          <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" required />
+          </div>
 
-              <div>
-                <label for="message">Message:</label>
-               <textarea name="message"
-                  class="message-area"
-                  cols="20"
-                  rows="1"
-                 ></textarea>  
-              </div>
+          <div>
+            <label for="message">Message:</label>
+            <textarea
+              name="message"
+              class="message-area"
+              cols="20"
+              rows="1"
+            ></textarea>
+          </div>
 
-              <div>
-                <button type="submit">Submit</button>
-              </div>
-            </form></section>
-            <section><div class="img-centre"><img class="map" src="../Images/Map.png" alt="Image of google maps"></div></section>
-</main>
-    <footer> <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
-    <nav class="navlist">
+          <div>
+            <button type="submit">Submit</button>
+          </div>
+        </form>
+      </section>
+      <section>
+        <div class="img-centre">
+          <img class="map" src="../Images/Map.png" alt="Image of google maps" />
+        </div>
+      </section>
+    </main>
+    <footer>
+      <a href="/index.html"><img src="../Images/Logo.png" alt="Logo" /></a>
+      <nav class="navlist">
         <ul>
           <li><a href="./Pages/projects.html">Projects</a></li>
           <li><a href="./Pages/contact.html">Contact</a></li>
@@ -78,6 +78,7 @@ product fresh</p>
         <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
         <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
         <a href="#"><i class="fa-brands fa-twitter icon"></i></a>
-      </footer>
+      </nav>
+    </footer>
   </body>
 </html>
