--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../Styles/reset.css" />
-    <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/style.css" />
     <script
       src="https://kit.fontawesome.com/4d3f468746.js"
       crossorigin="anonymous"
@@ -19,55 +19,85 @@
   </head>
   <body>
     <header>
-    <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
+      <a href="/index.html"><img src="../Images/Logo.png" alt="Logo" /></a>
       <nav class="navlist">
         <ul>
           <li><a href="/Pages/projects.html">Projects</a></li>
           <li><a href="/Pages/contact.html">Contact</a></li>
         </ul>
-    </nav>
+      </nav>
     </header>
     <main>
       <section class="pro-1">
         <div>
-        <h2>A fresh new title can make all the difference! </h2>
-        <p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
-You need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures.</p></div></section>
-<section class="pro">
-  <div class="project-list">
-  <ul>
-      <li>Project</li>
-      <li>Design</li>
-      <li>Client</li>
-      <li>Deliverable</li>
-      <li>Year</li>
-      <li>Field</li>
-</ul>
-<ul>
-  <li>Design Portfolio</li>
-  <li>Bakhtiyar Sattarov</li>
-  <li>Craftwork</li>
-  <li>Website Design</li>
-  <li>2018</li>
-  <li>Branding, Personal</li>
-</ul>
-</div></section>
-<section><div class="img-centre"><img class="walking-img" src="../Images/walking-2.png" alt="girl walking"></div></section>
-<p class="project-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, You need to be sure there isn't anything embarrassing hidden in the middle of text. You need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-    <section class="bottom-images"><img src="../Images/woods-2.png" alt="a forest">
-    <img src="../Images/flowers-table.png" alt="flowers on a table">
-  <img src="../Images/building.png" alt="a blue building"></section>
-</main>
-    <footer>  
-     <a href="/index.html"><img src="../Images/Logo.png" alt="Logo"></a>
-    <nav class="navlist">
+          <h2>A fresh new title can make all the difference!</h2>
+          <p class="project-text">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable. You need to be sure there isn't anything embarrassing
+            hidden in the middle of text. All the Lorem Ipsum generators on the
+            Internet tend to repeat predefined chunks as necessary, making this
+            the first true generator on the Internet. It uses a dictionary of
+            over 200 Latin words, combined with a handful of model sentence
+            structures.
+          </p>
+        </div>
+      </section>
+      <section class="pro">
+        <div class="project-list">
+          <ul>
+            <li>Project</li>
+            <li>Design</li>
+            <li>Client</li>
+            <li>Deliverable</li>
+            <li>Year</li>
+            <li>Field</li>
+          </ul>
+          <ul>
+            <li>Design Portfolio</li>
+            <li>Bakhtiyar Sattarov</li>
+            <li>Craftwork</li>
+            <li>Website Design</li>
+            <li>2018</li>
+            <li>Branding, Personal</li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div class="img-centre">
+          <img
+            class="walking-img"
+            src="../Images/walking-2.png"
+            alt="girl walking"
+          />
+        </div>
+      </section>
+      <p class="project-text">
+        There are many variations of passages of Lorem Ipsum available, but the
+        majority have suffered alteration in some form, by injected humour, or
+        randomised words which don't look even slightly believable. If you are
+        going to use a passage of Lorem Ipsum, You need to be sure there isn't
+        anything embarrassing hidden in the middle of text. You need to be sure
+        there isn't anything embarrassing hidden in the middle of text.
+      </p>
+      <section class="bottom-images">
+        <img src="../Images/woods-2.png" alt="a forest" />
+        <img src="../Images/flowers-table.png" alt="flowers on a table" />
+        <img src="../Images/building.png" alt="a blue building" />
+      </section>
+    </main>
+    <footer>
+      <a href="/index.html"><img src="../Images/Logo.png" alt="Logo" /></a>
+      <nav class="navlist">
         <ul>
           <li><a href="./Pages/projects.html">Projects</a></li>
           <li><a href="./Pages/contact.html">Contact</a></li>
         </ul>
-       <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
+        <a href="#"><i class="fa-solid fa-basketball icon"></i></a>
         <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
         <a href="#"><i class="fa-brands fa-twitter icon"></i></a>
-      </footer>
+      </nav>
+    </footer>
   </body>
 </html>
